--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "gatsby-starter-default",
-  "description": "Gatsby default starter",
+  "name": "portfolio-blog",
+  "description": "A personal site and blog for software developer, Chip Carnes",
   "version": "1.0.0",
-  "author": "Chip Carnes <chip.carnes27@gmail.com>",
+  "author": "Chip Carnes",
   "dependencies": {
     "gatsby": "^2.0.0",
     "gatsby-plugin-manifest": "^2.0.2",
     "gatsby-plugin-offline": "^2.0.5",
     "gatsby-plugin-react-helmet": "^3.0.0",
+    "gatsby-plugin-sass": "^2.0.1",
+    "node-sass": "^4.9.3",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0"
